--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
     "isemail": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
     "sequelize": "^4.39.0",
     "sqlite3": "^4.0.3"
   },
